--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
+  "author": "Miguel Savignano",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.2.5",
