--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.2.5",
+    "faker": "^4.1.0",
     "graphql": "^14.0.2"
   }
 }
